--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<p>Welcome to my website
+<html><h1>Welcome to my website</h1>
+  
 <a href="http://simontwong.github.io">simontwong.github.io</a>
 
-</p>
+
+  
+</html>
