--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<html><h1>Welcome to my website</h1>
+<html>
+  <head>
+    <title>Simon Wong</title>
+  </head>
+  <h1>Welcome to my website</h1>
   
+  <body>
 <a href="http://simontwong.github.io">simontwong.github.io</a>
 
 
-  
+  </body>
 </html>
